fixed hero index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Include script -->
     <script src="js/include.js" defer></script>
-
+    <!-- Include hero script -->
+    <script src="js/hero.js" defer></script>
 </head>
 <body>
     <!-- Header Include <include src="includes/header.html"></include>-->
@@ -84,7 +85,30 @@
     
 
     <!-- Page Content -->
-    <!-- Hero Section -->
+    <section class="hero">
+        <div class="hero-background">
+            <!-- This could be a video or rotating images -->
+            <img src="images/building_health_sciences.jpg" alt="WPE Research Lab" class="hero-image active">
+            <img src="images/undraw_environment.svg" alt="WPE Field Research" class="hero-image">
+            <img src="images/card_health.png" alt="WPE Research Team" class="hero-image">   
+        </div>
+        <div class="hero-content">
+            <h2 class="display-text">Water, Public Health<br>and Environmental Engineering</h2>
+            <p class="hero-tagline">Pioneering sustainable solutions for global environmental challenges since 2003</p>
+            <p class="hero-description">Our interdisciplinary approach brings together 25 academics and 50 PhD researchers across four specialized research groups.</p>
+            <div class="hero-ctas">
+                <a href="research-groups.html" class="btn btn-primary">Discover Our Research</a>
+                <a href="people.html" class="btn btn-secondary">Meet Our Team</a>
+            </div>
+        </div>
+        <div class="hero-scroll-indicator">
+            <span>Scroll to explore</span>
+            <i class="fas fa-chevron-down"></i>
+        </div>
+    </section>
+
+    
+    <!-- Hero Section 
     <section class="hero">
         <div class="hero-content">
             <h2 class="display-text">Water, Public Health<br>and Environmental Engineering</h2>
@@ -92,7 +116,7 @@
             <a href="#" class="btn btn-primary">Discover Our Research</a>
         </div>
     </section>
-
+-->
     <!-- Featured Section -->
     <section class="featured">
         <h2 class="section-title">Featured Research</h2>
